Help Command Added
Co-authored-by:
Catry <catry.me@gmail.com>
Co-authored-by: minseo0388@outlook.com <minseo0388@outlook.com>